--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,8 @@
 [tox]
-envlist = py36,py37,py38,py39
+envlist = py36,py37,py38,py39,py310
+requires =
+    tox >3,<4
+    tox-gh-actions
 
 [gh-actions]
 python =
@@ -7,17 +10,25 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39
+    3.10: py310
 
 [testenv]
 commands = pytest {posargs}
-extras = test
+deps =
+    pytest-mypy-plugins >= 1.9.2
 
 [testenv:format]
-basepython = python3.9
 deps =
     black
     isort>=5
 skip_install = true
 commands =
     isort --check-only --diff lxml-stubs
-    black --check --diff -v lxml-stubs/
+    black --check --diff -v lxml-stubs
+
+[testenv:mypy]
+deps =
+    mypy
+skip_install = true
+commands =
+    mypy lxml-stubs
