--- a/tox.ini
+++ b/tox.ini
@@ -32,3 +32,10 @@ deps =
 skip_install = true
 commands =
     mypy lxml-stubs
+
+[testenv:build]
+deps =
+    build
+skip_install = true
+commands =
+    python -m build
