Better mypy report

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps =
     mypy
 skip_install = true
 commands =
-    mypy lxml-stubs
+    mypy --show-error-codes --show-error-context --pretty lxml-stubs
 
 [testenv:build]
 deps =
