--- a/test-data/test-etree.yml
+++ b/test-data/test-etree.yml
@@ -82,3 +82,20 @@
         from lxml import etree
         document = etree.XML("<doc></doc>", parser=etree.XMLParser(), base_url="http://example.com/")
         reveal_type(document)  # N: Revealed type is "lxml.etree._Element"
+
+-   case: etree_pyerrorlog_object
+    main: |
+        from lxml import etree
+        obj = etree.PyErrorLog()
+        reveal_type(obj)  # N: Revealed type is "lxml.etree._xmlerror.PyErrorLog"
+        reveal_type(obj.level_map)  # N: Revealed type is "builtins.dict[builtins.int, builtins.int]"
+
+-   case: etree_error_log_struct
+    main: |
+        from lxml import etree
+        parser: etree.XMLParser
+        s: str
+        document = etree.XML(s, parser=parser)
+        last_err = parser.error_log.last_error
+        reveal_type(last_err.level)  # N: Revealed type is "builtins.int"
+        reveal_type(last_err.filename)  # N: Revealed type is "Union[builtins.str, None]"
