--- a/test-data/test-builder.yml
+++ b/test-data/test-builder.yml
@@ -26,7 +26,7 @@
       rt: lxml.etree._Element
     - method: BAR
       rt: lxml.etree._Element
-    - method: __fOoBaR_
+    - method: __nonExistent__
       rt: lxml.etree._Element
     - method: __str__
       rt: builtins.str
