More semantic text alias arguments for reviewed portions
Explicit TypeAlias support needed from recent mypy version

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands =
 
 [testenv:mypy]
 deps =
-    mypy
+    mypy >= 0.920
 skip_install = true
 commands =
     mypy --show-error-codes --show-error-context --pretty lxml-stubs
