--- a/test-data/test-xpath.yml
+++ b/test-data/test-xpath.yml
@@ -30,13 +30,8 @@
     f = open("myfile.txt", "r")
     doc = etree.parse(f)
     evaluator = etree.XPathElementEvaluator(root)
-    reveal_type(evaluator)
-    evaluator = etree.XPathElementEvaluator(doc)
-    reveal_type(evaluator)
-  out: |
-    main:7: note: Revealed type is "lxml.etree._xpath.XPathElementEvaluator"
-    main:8: error: Argument 1 to "XPathElementEvaluator" has incompatible type "_ElementTree"; expected "_Element"
-    main:9: note: Revealed type is "lxml.etree._xpath.XPathElementEvaluator"
+    reveal_type(evaluator)  # N: Revealed type is "lxml.etree._xpath.XPathElementEvaluator"
+    evaluator = etree.XPathElementEvaluator(doc)  # E: Argument 1 to "XPathElementEvaluator" has incompatible type "_ElementTree"; expected "_Element"
 
 - case: xpath_create_evaluator_for_document
   main: |
@@ -45,14 +40,9 @@
     root = etree.XML(s)
     f = open("myfile.txt", "r")
     doc = etree.parse(f)
-    evaluator = etree.XPathDocumentEvaluator(root)
-    reveal_type(evaluator)
     evaluator = etree.XPathDocumentEvaluator(doc)
-    reveal_type(evaluator)
-  out: |
-    main:6: error: Argument 1 to "XPathDocumentEvaluator" has incompatible type "_Element"; expected "_ElementTree"
-    main:7: note: Revealed type is "lxml.etree._xpath.XPathDocumentEvaluator"
-    main:9: note: Revealed type is "lxml.etree._xpath.XPathDocumentEvaluator"
+    reveal_type(evaluator)  # N: Revealed type is "lxml.etree._xpath.XPathDocumentEvaluator"
+    evaluator = etree.XPathDocumentEvaluator(root)  # E: Argument 1 to "XPathDocumentEvaluator" has incompatible type "_Element"; expected "_ElementTree"
 
 - case: xpath_create_evaluator_autodetect
   parametrized:
