Enable pyright check

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,13 @@ skip_install = true
 commands =
     mypy --show-error-codes --show-error-context --pretty lxml-stubs
 
+[testenv:pyright]
+deps =
+    pyright
+skip_install = true
+commands =
+    pyright lxml-stubs
+
 [testenv:build]
 deps =
     build
