--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -26,7 +26,9 @@ jobs:
       run: pip install -v tox
 
     - name: Pre-validation
-      run: tox -v -e mypy
+      env:
+        TOX_PARALLEL_NO_SPINNER: 1
+      run: tox -p -v -e mypy,pyright
 
     - name: Build sdist and wheel
       run: tox -v -e build
